<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#fff"
android:screenOrientation="landscape"
tools:context=".frm_all_forms_record">

<androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:title="Activity Record"
    app:titleTextColor="@color/white"
    android:background="#4BB543"
    android:layout_marginBottom="5dp"
    />

<LinearLayout
    android:id="@+id/btns"
    android:layout_below="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="end"
    android:background="#D3D3D3"
    android:layout_marginEnd="3dp">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_new"
        android:text="NEW"
        android:background="@drawable/roundstyle"
        android:backgroundTint="#337ab7"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginEnd="3dp"
        />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SAVE"
        android:background="@drawable/roundstyle"
        android:backgroundTint="#337ab7"
        android:textColor="@color/white"
        android:layout_marginEnd="3dp"
        android:textStyle="bold"/>

    <Button
        android:visibility="gone"
        android:id="@+id/btn_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LIST"
        android:background="@drawable/roundstyle"
        android:backgroundTint="#337ab7"
        android:textColor="@color/white"
        android:layout_marginEnd="3dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CANCEL"
        android:background="@drawable/roundstyle"
        android:backgroundTint="#337ab7"
        android:textColor="@color/white"
        android:layout_marginEnd="3dp"
        android:textStyle="bold" />
</LinearLayout>

<ScrollView
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/btns"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="Activity Name"
                android:layout_weight="2"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="start"
                android:layout_marginEnd="7dp"
                android:layout_marginStart="3dp"
                android:textSize="18dp"
                />

            <EditText
                android:id="@+id/txtactivity_name"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="3"
                android:background="#F5F5F5"
                android:hint="@string/activityname"
                android:textColor="@color/black"
                android:textColorHint="#808080"
                android:focusable="false"
                android:enabled="true"
                android:textIsSelectable="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="Type Of Activity"
                android:layout_weight="2"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="start"
                android:layout_marginEnd="7dp"
                android:layout_marginStart="3dp"
                android:textSize="18dp"
                />
            <EditText
                android:id="@+id/txttype_of_activity"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:textColorHint="#808080"
                android:background="#F5F5F5"
                android:hint="@string/typeofactivity"
                android:textColor="@color/black"
                android:layout_weight="3"
                android:focusable="false"
                android:enabled="true"
                android:textIsSelectable="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Qty"
                android:layout_weight="2"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="start"
                android:layout_marginEnd="7dp"
                android:layout_marginStart="3dp"
                android:textSize="18dp"
                />

            <EditText
                android:id="@+id/txtqty"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:textColorHint="#808080"
                android:background="#F5F5F5"
                android:hint="@string/qty"
                android:textColor="@color/black"
                android:layout_weight="3"
                android:singleLine="true"
                android:inputType="numberDecimal"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Inform To"
                android:layout_weight="2"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="start"
                android:layout_marginEnd="7dp"
                android:layout_marginStart="3dp"
                android:textSize="18dp"
                />

            <EditText
                android:id="@+id/txtinform"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:textColorHint="#808080"
                android:background="#F5F5F5"
                android:hint="@string/inform"
                android:textColor="@color/black"
                android:layout_weight="3"
                android:singleLine="true"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Remarks"
                android:layout_weight="2"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="start"
                android:layout_marginEnd="7dp"
                android:layout_marginStart="3dp"
                android:textSize="18dp"
                />

            <EditText
                android:id="@+id/txtremarks"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:textColorHint="#808080"
                android:background="#F5F5F5"
                android:hint="@string/remarks"
                android:textColor="@color/black"
                android:layout_weight="3"
                android:singleLine="true"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="25dp"/>
    </LinearLayout>
</ScrollView>
</RelativeLayout>